fix fonts on mobile displays

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html,
 body {
   border: 0;
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: system-ui;
   box-sizing: border-box;
 }
 
@@ -210,9 +210,10 @@ h2 {
 @media (max-width: 999px) {
   h1 {
     font-size: 1.7rem;
+    letter-spacing: none;
   }
   .map--div {
-    font-size: 2rem;
+    font-size: 1rem;
   }
   .place-visited,
   .place-type,
@@ -239,5 +240,8 @@ h2 {
   h3 {
     font-size: 1.2rem;
     text-align: center;
+  }
+  .leaflet-popup-content {
+    font-size: 17px;
   }
 }
